# asyncio-foundationdb

./: .build.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  HACKING.md  LICENSE  Makefile  Pipfile  README.md  README.rst  TODO.md  WHY.md  build.py  ci.sh  do  fdb_c.h  fdb_c2.h  ffibuild.py  found.md  makefile  pyproject.toml  python-compile.sh  readme.py  requirements-dev.txt  requirements.dev.txt  requirements.source.txt  requirements.txt  setup.py  tests.py  venv  venv-extra.sh
.github/workflows/: _binding-tester.yaml  build.yaml  continuous-integration.yaml  correctness.yaml  pr-correctness.yaml  release.yaml
benchmark/: Makefile  coroutines.py  helper.py  simple-fdb.py  simple.py
doc/: Makefile  make.bat
doc/source/: conf.py
found/: __init__.py  base.py  bstore.py  build_found.py  eavstore.py  fdb_c.h  fdb_c2.h  ffibuild.py  index.html  nstore.py  pool.py  pstore.py  sparky.py  tester.py  tester_aio.py  tester_pthread.py  tests.py  tuple.py  vnstore.py
found/ext/: bstore.py  eavstore.py  nstore.py  pool.py  pstore.py
found/ext/vnstore/: __init__.py  server.py
found/ext/vnstore/templates/: history-detail-add.html  history-list.html  navigate.html
found/templates/: history-change.html  history-detail-apply.html  history-detail-remove.html  history-detail.html  index.html  navigate.html
found/v510/: base.py  tuple.py
scripts/: run_bindingtester.sh  setup_bindingtester.sh
src/: fdb_c.h  fdb_c2.h  found_build.py  tests.py
src/found/: __init__.py  __init__.py~
src/found/v510/: __init__.py  base.py  directory.py  locality.py  subspace.py  tuple.py
