[project]
name = "asyncio-foundationdb"
version = "0.13.0"
description = "FoundationDB drivers for asyncio"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Amirouche A. BOUBEKKI", email = "amirouche.boubekki@gmail.com" },
]

requires-python = ">=3.9"

dependencies = [
    "aiostream",
    "cffi",
    "foundationdb>=7.3,<7.4",
    "immutables",
    "loguru",
    "uuid7",
    "typing-extensions>=4.12.0",
    "more-itertools>=10.8.0,<11.0.0",
]

[project.optional-dependencies]
server = [
    "jinja2",
    "uvicorn",
    "zstandard",
]

[project.urls]
Repository = "https://github.com/amirouche/asyncio-foundationdb"

[build-system]
requires = ["poetry-core", "setuptools", "cffi"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "found" }]
build = "found/ffibuild.py"

[tool.poetry.group.dev.dependencies]
bandit = {version = ">=1.9", python = ">=3.10"}
black = "*"
isort = "*"
pylama = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
setuptools = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.bandit]
skips = ["B101", "B311"]

[tool.coverage.run]
omit = [
    "found/tester_aio.py",
    "found/tester_pthread.py",
    "found/ffibuild.py",
]
