[project]
name = "asyncio-foundationdb"
version = "0.13.0"
description = "FoundationDB drivers for asyncio"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Amirouche A. BOUBEKKI", email = "amirouche.boubekki@gmail.com" },
]

requires-python = ">=3.9"

dependencies = [
    "aiostream",
    "cffi",
    "loguru",
    "uuid7",
    "typing-extensions>=4.12.0",
    "more-itertools>=10.8.0,<11.0.0",
]

[project.optional-dependencies]
server = [
    "jinja2",
    "uvicorn",
    "zstandard",
]

[project.urls]
Repository = "https://github.com/amirouche/asyncio-foundationdb"

[build-system]
requires = ["setuptools>=68", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["found*"]

[dependency-groups]
dev = [
    "foundationdb>=7.3,<7.4",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "setuptools",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = ["found/tester_aio.py", "found/tester_pthread.py", "found/ffibuild.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "S", "W"]
ignore = ["S101", "S311"]

[tool.coverage.run]
omit = [
    "found/tester_aio.py",
    "found/tester_pthread.py",
    "found/ffibuild.py",
]
